--- a/.github/workflows/synctoaruba.yml
+++ b/.github/workflows/synctoaruba.yml
@@ -31,5 +31,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./deploy/
-          server-dir: .
+          server-dir: ./
 
