--- a/.htaccess
+++ b/.htaccess
@@ -9,3 +9,5 @@ RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^(.*)/?$ $1.html [L]
 
 ErrorDocument 404 /404.html
+
+AddType application/json .json
